Updated styling, footer

--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -14,3 +14,7 @@
 
 @media only screen and (min-width: 1500px) {
 }
+
+.homeSplashFade {
+    background-image: url('/img/Anthem_Texture_Topo_Grey.png');
+}
