link CSS update

--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -22,6 +22,12 @@ h2.headerTitleWithLogo {
 h2.projectTitle {
     color: whitesmoke;
 }
+body a {
+    color: #ef553d;
+}
+body a:hover {
+    color: #ed5066;
+}
 
 .homeSplashFade .button {
     color: #ef553d;
