--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -15,6 +15,13 @@
 @media only screen and (min-width: 1500px) {
 }
 
+body {
+    background-color: whitesmoke;
+}
+body .lightBackground {
+    background-color: #eee;
+}
+
 h2.headerTitleWithLogo {
     color: whitesmoke;
 }
@@ -27,6 +34,10 @@ body a {
 }
 body a:hover {
     color: #ed5066;
+}
+
+body.blog .wrapper {
+    max-width: 1400px;
 }
 
 .homeSplashFade .button {
